--- a/forms/views/forms.erb
+++ b/forms/views/forms.erb
@@ -76,6 +76,16 @@
         <input type="radio" id='heroin' name='fave_vices' value='heroin'>
     </p>
 
+    <p>
+        <label for="range">Range</label>
+        <input type="range" id='range' name='range' min="0" max="10" step="2" value="6">
+    </p>   
+
+    <p>
+        <label for="color">Range</label>
+        <input type="color" id='color' name='color'>
+    </p> 
+
     <button>Submit</button>
 </form>
 
