--- a/sydjs/views/forms.erb
+++ b/sydjs/views/forms.erb
@@ -3,14 +3,14 @@
     <p>
         <h1>Do you know which moive's poster is it?</h1>
     </p>
+    <div class="form">
+        <p class="title">
+        <label for="title">Move's name</label>
+        <input type="search" name='title' id='title' placeholder='Jaws' value="<%= params[:title] %>">
+        </p>
 
-    <p>
-    <label for="title">Move's name</label>
-    <input type="search" name='title' id='title' placeholder='Jaws' value="<%= params[:title] %>">
-    </p>
-
-    <p>
-        <button>Go</button>
-    </p>
-
+        <p class="button">
+            <button>Go</button>
+        </p>
+    </div>
 </form>
