sinatra_games version 1

--- a/sinatra_games/views/ball.erb
+++ b/sinatra_games/views/ball.erb
@@ -1,1 +1,7 @@
-<h1>8_ball</h1>
+
+
+<form action="answer">
+        <label for="question">Enter your quesion: </label>
+        <textarea name="question" id="question"></textarea>
+        <button>Submit</button>
+</form>
