--- a/sinatra_games/views/home.erb
+++ b/sinatra_games/views/home.erb
@@ -1,7 +1,10 @@
-<h1>home</h1>
+<h1>Please choose which game do you want to play?</h1>
 
-<h2><a href="8_ball">8_ball</a></h2>
 
-<h2><a href="rps">rps</a></h2>
+<ul>
+    <li><a href="8_ball">8_ball</a></li>
 
-<h2><a href="secret_number">secret_number</a></h2>
+    <li><a href="/games/rock_paper_scissors/:throw">rps</a></li>
+
+    <li><a href="secret_number">secret_number</a></li>
+</ul>
