--- a/sinatra_games/views/8_ball/ball.erb
+++ b/sinatra_games/views/8_ball/ball.erb
@@ -1,6 +1,6 @@
 
 
-<form action="answer">
+<form action="/8_ball/answer">
         <label for="question">Enter your quesion: </label>
         <textarea name="question" id="question"></textarea>
         <button>Submit</button>
