--- a/sinatra_games/views/home.erb
+++ b/sinatra_games/views/home.erb
@@ -4,7 +4,7 @@
 <ul>
     <li><a href="8_ball">8_ball</a></li>
 
-    <li><a href="/games/rock_paper_scissors/:throw">rps</a></li>
+    <li><a href="/games/rock_paper_scissors/">rps</a></li>
 
     <li><a href="secret_number">secret_number</a></li>
 </ul>
