added database system

--- a/return_of_movies/views/forms.erb
+++ b/return_of_movies/views/forms.erb
@@ -1,7 +1,7 @@
 <form action="/lists">
 
     <p>
-        <h1>Do you know which moive's poster is it?</h1>
+        <h1>Enter the movie's name here: </h1>
     </p>
     <div class="form">
         <p class="title">
@@ -12,5 +12,6 @@
         <p class="button">
             <button>Go</button>
         </p>
+        <div class="home_page"></div>
     </div>
 </form>
