--- a/return_of_movies/public/css/forms.css
+++ b/return_of_movies/public/css/forms.css
@@ -1,45 +1,53 @@
 body {
-background-color: rgb(246, 243, 250);
-background-image: url("https://lh3.googleusercontent.com/-HS4W6DZBjmY/AAAAAAAAAAI/AAAAAAAAAHA/NK2BKoOndlk/photo.jpg");
+background-image: url("http://th02.deviantart.net/fs24/PRE/i/2008/007/2/6/Theatre_Movie_Curtains_Stock_by_PyronixcoreStock.jpg");
 background-size: cover;
-color: rgb(134, 135, 239);
 }
-h1 {
-    padding-left: 5%;
-}
-
 
 p {
-    display: block;
+    text-align: center;
 }
 
-div.poster {
-    margin-top:20%;
-    margin-left: 40%;
+h1 {
+    text-align: center;
 }
 
-form.anther {
-    margin-top: 80%;
-    margin-left: 40%;
+h3 {
+    text-align: center;
 }
 
-div.form {
-    width: 300px;
-    height: 100px;
-    background-color: rgb(213, 231, 255);
-    position: absolute;
-    top: 100px;
-    left: 35%;
-    border: 14px solid rgb(244, 249, 248);
-    border-radius: 20px;
+a {
+    text-decoration: none;
+    color: white;
 }
 
-p.title {
-    padding-left: 20px;
-    font-size: 20px;
+img {
+    margin-left: 26%;
+}
+.home_page {
+
+    max-width: 650px;
+    height: 391px;
+    background-image: url("http://images.contactmusic.com/images/feature-images/shaun-the-sheep-movie-636-380.jpg");
 }
 
-p.button {
-    padding-left: 130px;
+
+
+.container {
+    max-width: 650px;
+    height: 535px;
+    margin: 10% auto;
+    background-color: rgba(255,255,255,0.5);
+    padding-top: 10px;
+    color: rgb(87, 46, 46);
+
 }
+
+.anther {
+    max-width: 650px;
+    height: 117px;
+    margin: 10% auto;
+    background-color: rgba(255,255,255,0.5);   
+    padding-top: 5px;
+}
+
 
